<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidLayoutTest</string>
    <string name="welcome_text">Welcome to</string>
    <string name="rider_heading">Rider</string>
    <string name="rider_lndng_description1">Rider offers to share </string>
    <string name="rider_lndng_description2">the travel and courier in</string>
    <string name="rider_lndng_description3">city to city.</string>
    <string name="action_settings">Settings</string>
    <string name="stps_lnk">Steps</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="offer_ride_txt1">You can carry</string>
    <string name="offer_ride_txt2">fellows(Person/Courier)</string>
    <string name="offer_ride_txt3"> You can Share your travel either with </string>
    <string name="offer_ride_txt4"> people or you can carry courier on the basis of </string>
    <string name="offer_ride_txt5"> capacity your earnings will be decided.</string>
</resources>
