<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tripatikumar.androidlayouttest.MainActivity2"
    android:background="@color/accent_material_light">

    <TextView android:text="@string/offer_ride_txt1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/rideOfferHdngTxt1"
        style="@style/lndngWcStyle"
        />
    <TextView android:text="@string/offer_ride_txt2" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/rideOfferHdngTxt2"
        android:layout_below="@id/rideOfferHdngTxt1"
        style="@style/lndngWcStyle"
        />
    <TextView android:text="@string/offer_ride_txt3" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/rideOfferHdngTxt3"
        android:layout_below="@id/rideOfferHdngTxt2"
        style="@style/smallWhiteTxtStyle"
        />
    <TextView android:text="@string/offer_ride_txt4" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/rideOfferHdngTxt4"
        android:layout_below="@id/rideOfferHdngTxt3"
        style="@style/smallWhiteTxtStyle"
        />
    <TextView android:text="@string/offer_ride_txt5" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/rideOfferHdngTxt5"
        android:layout_below="@id/rideOfferHdngTxt4"
        style="@style/smallWhiteTxtStyle"
        />

    <LinearLayout
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="@dimen/linear_layout_height"
        android:id="@+id/lnrImageLayout"
        android:orientation="horizontal"
        android:paddingTop="@dimen/linear_padding_top"
        android:layout_below="@+id/rideOfferHdngTxt5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp">

        <ImageView
            android:id="@+id/coTraveller"
            android:layout_width="@dimen/linear_img_width"
            android:layout_height="@dimen/linear_img_height"
            android:src="@drawable/co_travellers"
            android:layout_gravity="left"/>
        <ImageView
            android:id="@+id/courierImg"
            android:layout_width="@dimen/linear_img_width"
            android:layout_height="@dimen/linear_img_height"
            android:src="@drawable/pool_courier"
            android:layout_gravity="right"/>
        </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/forward_button"
        android:id="@+id/lndScndBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
